alignment fixed

--- a/grid.scss
+++ b/grid.scss
@@ -66,10 +66,13 @@ body {
 
 .grid {
     display: grid;
+    display: -ms-grid;
     grid-template-columns: repeat(16, 3.125vw);
     grid-template-rows: repeat(8, 3.125vw);
-    grid-column-gap: 1.3vw;
-    grid-row-gap: 5.725vw;
+    -ms-grid-columns: 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw;
+    -ms-grid-rows: 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw 3.125vw;
+    grid-column-gap: 1.5625vw;
+    grid-row-gap: 6.25vw;
     // grid-template-areas: 
     //     "1-1 1-2 1-3 1-4 1-5 1-6 1-7 1-8 1-9 1-10 1-11 1-12 1-13 1-14 1-15 1-16"
     //     "2-1 2-2 2-3 2-4 2-5 2-6 2-7 2-8 2-9 2-10 2-11 2-12 2-13 2-14 2-15 2-16"
@@ -84,7 +87,7 @@ body {
     margin: 0;
     overflow: hidden;
     position: absolute;
-    background: url("https://picsum.photos/1920/1200") no-repeat center center;
+    background: url("https://picsum.photos/1920/1201") no-repeat center center;
     background-size: cover;
 
 
@@ -93,61 +96,65 @@ body {
         align-self: center;
         display: block;
         content: "";
-        height: 6.25vw;
-        width: 6.25vw;
-        background-color: none;
+        height: 9.375vw;
+        width: 9.375vw;
+        // opacity: 0.5;
+        // background-color: rgba(0,0,0,0.5);
         // mix-blend-mode: multiply;
 
         transform-origin: center center;
         clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+        -ms-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 
         transition: all 0.2s;
 
         &:nth-child(even) {
             background-color: none;
-            margin-top: 8.83883vw;
+            margin-top: 9.375vw;
             // 84.853px;
         }
 
 
         &:hover {
-            background: none !important;
+            opacity: 1 !important;
+            // background: none !important;
         }
     }
 
     .bgcolor {
-        background: url("https://picsum.photos/1900/1000") fixed top left;
-        // background: navy;
+        background: url("https://picsum.photos/1900/1100") fixed top left;
     }
 
     .med {
         position: absolute;
-        height: 12.5vw;
-        width: 12.5vw;
-        margin-right: 4.4vw;
-        background: url("https://picsum.photos/1900/1000") fixed top left;
+        height: 18.75vw;
+        width: 18.75vw;
+        margin-right: 4.7vw;
+        background: url("https://picsum.photos/1900/1100") fixed top left;
+        // opacity: 0.7;
     }
 
     // has to be on even columns
     .lg {
         position: absolute;
-        height: 18.75vw;
-        width: 18.75vw;
+        height: 28.125vw;
+        width: 28.125vw;
         grid-row: 2 / span 3;
+        -ms-grid-row-span: 3;
         grid-column: 8 / span 3;
-        // background-color: green;
-        background: url("https://picsum.photos/1900/1000") fixed top left;
+        -ms-grid-column-span: 3;
+        background: url("https://picsum.photos/1900/1100") fixed top left;
+        // opacity: 0.85;
     }    
 
     #med1 {
         grid-row: 2 / span 2;
         grid-column: 5 / span 2;
-        // background-color: red;
     }
 
     #med2 {
         grid-row: 3 / span 2;
         grid-column: 6 / span 2;
-        // background-color: yellowgreen;
     }
 }
